add the scale api which performs the scale operations nested or regular tin-tin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
         "tt_types.h": "c",
         "tt_debug.h": "c",
         "activations.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "tt_math.h": "c",
+        "motor_ae_model.h": "c"
     }
 }
